--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css"> </link>
-    <script src="app.js" charset="utf-8"></script>
-    <title>MemoryGame </title>
+    <meta charset="utf-8">
+    <title>Wack-a-Mole</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
-    <h1>Memory Game</h1>
-    <h2>Score: <span id="result"></span></h2>
+    <h1>Wack a Mole</h1>
+    <h2>Your score:<span id="score"></span>
+        <span id = "btn">
+            <input class = "btn" type ="button" value="Play Again" onclick="setTimeout(restart,1000)">
+        </span>
+    </h2>
+    <h2>Seconds Left:
+    <span id = "time-left"></span></h2>
 
     <div class="grid">
-
+        <div class = "square" id = "1"></div>
+        <div class = "square" id = "2"></div>
+        <div class = "square" id = "3"></div>
+        <div class = "square" id = "4"></div>
+        <div class = "square" id = "5"></div>
+        <div class = "square" id = "6"></div>
+        <div class = "square" id = "7"></div>
+        <div class = "square" id = "8"></div>
+        <div class = "square" id = "9"></div>
     </div>
 </body>
+<script src="app.js" charset="utf-8"></script>
 
 </html>
